--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -1,27 +1,26 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 *{
     font-family: "Roboto", sans-serif;
 }
 
 .navbar{
-    position: fixed;
-    top:0;
-    left:0;
+    position: relative;
+    top: 0;
+    left: 0;
     width: 100%;
+    padding: 10px 0px;
     flex-wrap: wrap;
     display: flex;
-    justify-content: space-between;
+    justify-content:space-around;
     align-items: center;
+    height: fit-content;
     box-shadow:0 1px 3px -2px black ;
     transition: background-color 0.3s ease;
-    z-index:1000;
 }
 .navlogo{
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: flex-end;
     gap: 0.8rem;
     width: 25%;
 }
@@ -31,13 +30,14 @@
     font-weight: 600;
 }
 .nav-menu {
+    width: 60%;
     box-sizing: border-box;
     list-style-type: none;
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     gap: 50px;
     color: #626262;
-    padding-right: 20px;
+    
      
 }
 
@@ -56,6 +56,7 @@
     width: 15%;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
     gap: 0.6rem;
     line-height: 1;
 }
