--- a/frontend/src/components/hero/hero.css
+++ b/frontend/src/components/hero/hero.css
@@ -8,6 +8,7 @@
     
 }
 .left-part{
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -58,3 +59,10 @@
 
 }
 
+.right-part{
+    flex: 1;
+    display: flex;
+    flex: 1 1 1;
+    align-items: center;
+    justify-content: center;
+}
