--- a/frontend/src/components/Breadcrums/breadcrum.css
+++ b/frontend/src/components/Breadcrums/breadcrum.css
@@ -2,6 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: start;
-    gap: 4px;
-    padding-left: 40px;
+    gap: 8px;
+    font-size: 16px;
+    font-weight: 600;
+    margin: 60px 70px;
+    text-transform: capitalize ;
+    color:  #5e5e5e ;
 }
